# kstbot

./: .gitignore  main.py  pyproject.toml
kstbot/: bot.py  config.py  handlers.py  kb.py  main.py  main.txt  msg_texts.py
kstbot/parse/: partners_parser.py
