[tool.poetry]
name = "kstbot"
version = "0.1.0"
description = ""
authors = ["Daniil Valakhov <daniil.2804@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.2.0"
requests = "^2.31.0"
lxml = "^4.9.3"
bs4 = "^0.0.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
